# dotfiles

./: .editorconfig  .gitignore  .manurc  .vimrc  .zsh.aliases  .zsh.exports  .zsh.exports.secret.dist  .zsh.functions  .zsh.zle  .zshrc  INITIAL_SETTING.md  Makefile  README.md  REFERENCES.md  install.sh  pyproject.toml  taskfile.dotfile.yml  taskfile.yml
.config/: starship.toml
.config/aerospace/: aerospace.toml
.config/cava/: config
.config/copilot/: copilot-instructions.md
.config/git/: ignore
.config/hammerspoon/: ctrlDoublePress.lua  init.lua
.config/lazygit/: config.yml
.config/mcp/: claude_desktop_config.json
.config/nix/: flake.nix  nix.conf
.config/nvim/: init.lua
.config/sheldon/: plugins.toml
.config/sketchybar/: colors.sh  sketchybarrc
.config/sketchybar/items/: aerospace_app.sh  battery.sh  clock.sh
.config/sketchybar/plugins/: aerospace.sh  aerospace_app.sh  clock.sh  front_app.sh  volume.sh
.config/skhd/: skhdrc
.config/wezterm/: wezterm.lua
.serena/: project.yml
ansible/: README.md  playbook.yml
demo/: demo.tape
docker/: compose.yaml
karabiner/: karabiner.json
man/: Chrome.md  DB.md  ffmpeg.md  neovim.md  term.md
nix/: flake.nix  home.nix
nix/config/: README.md
nix/config/aerospace/: aerospace.toml
nix/config/claude/: settings.json
nix/config/copilot/: config.json  copilot-instructions.md  mcp-config-usedto.json  (+1 more)
nix/home/: .gitconfig
nix/nix-darwin/: config.nix  homebrew.nix  system.nix
scripts/: brew_packages.sh  dotfile_symbolic_link.sh
src/dotfiles/: generate_mcp_config.py  taskfile_buffer.py
(+127 files in other folders)
